# embeding_daft

RubikSQL-dev/: .gitignore  LICENSE  README.md  demo.bash  demo.py  pyproject.toml  requirements.txt  setup.cfg
RubikSQL-dev/.github/: copilot-instructions.md
RubikSQL-dev/__tasks__/: todo.md
RubikSQL-dev/data/: unicom.db
RubikSQL-dev/docs/: API_USAGE.md  CLI_USAGE.md  DAFT_DISTRIBUTED_EMBEDDING_REFACTOR_CN.md  KB_BUILD_REFACTOR_PLAN.md  RUBIKSQL_CODE_WALKTHROUGH_CN.md
RubikSQL-dev/scripts/: clear.bash  flake.bash
RubikSQL-dev/src/rubiksql/: __init__.py  _extract_encoder.py  agent.py  api.py
RubikSQL-dev/src/rubiksql/agents/: __init__.py  retrieval_agent.py
RubikSQL-dev/src/rubiksql/api/: __init__.py  database.py  experience.py  knowledge.py  nl2sql.py  sql_pipeline.py
RubikSQL-dev/src/rubiksql/cli/: __init__.py  ask_cli.py  build_cli.py  config_cli.py  db_cli.py  progress.py  rubiksql.py  search_cli.py  skill_cli.py  tool_cli.py
RubikSQL-dev/src/rubiksql/db/: __init__.py  info.py  manager.py
RubikSQL-dev/src/rubiksql/klbase/: __init__.py  base.py  base__legacy.py  manager.py  stages__legacy.py  utils.py
RubikSQL-dev/src/rubiksql/resources/: __init__.py  rubik_kb.py
RubikSQL-dev/src/rubiksql/tools/: __init__.py  add_knowledge.py  db_info.py  exec_sql.py  extract_synonyms.py  fd_check.py  fuzzy_enum.py  magic_number.py  submit.py  submit_kls.py
RubikSQL-dev/src/rubiksql/ukfs/: __init__.py  col_ukft.py  db_ukft.py  enum_ukft.py  exp_ukft.py  pred_ukft.py  tab_ukft.py  taxo_ukft.py
RubikSQL-dev/src/rubiksql/utils/: __init__.py  basic_utils.py  config_utils.py  db_utils.py  pred_utils.py  progress_utils.py
(+380 files in other folders)
